# vmake

./: Cargo.toml  File  format.txt  test.vmkp  vmkp.ipynb
scripts/: run.sh
src/: fuse.rs  main.rs  vmkp.rs
src/vmkp/: data.rs  entry.rs  entry_type.rs  mod.rs  reader.rs  reader_0101.rs  v0101.rs  vmkp.rs
src/vmkp/entry/: base_reader.rs  data.rs  entry.rs  entry_type.rs  mod.rs  reader.rs
src/vmkp/types/: data.rs  entry.rs  mod.rs  vmkp.rs
vmkp/: format.txt  format2.txt
