[package]
name = "vmake"
version = "0.1.0"
edition = "2021"
authors = ["syoch <syoch64@gmail.com>"]
description = "Video making"
features = ["io_more_error"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.2"
tokio-tungstenite = {version = "0.17.2", features = ["native-tls"]}
tokio = { version = "1", features = ["full"]}
clap = "2.20.3"
futures-util = "0.3.21"
once_cell = "1.13.0"
tokio-native-tls = "0.3.0"